// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth Create form Form should render correctly 1`] = `
<div
  className="sc-iCoHVE jPPvpm"
>
  <div
    className="sc-fujyUd juGuta"
  >
    <form
      noValidate={true}
      onSubmit={[Function]}
    >
      <label
        className="sc-bdnylx YDaVd"
        htmlFor="username"
      >
        <span
          className="sc-gtssRu hqOiqN"
        >
          Username
        </span>
        <input
          autoComplete="create-username"
          className="sc-eCApGN gNiOsV"
          id="username"
          name="username"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-bdnylx YDaVd"
        htmlFor="email"
      >
        <span
          className="sc-gtssRu hqOiqN"
        >
          Email address
        </span>
        <input
          autoComplete="create-email"
          className="sc-eCApGN gNiOsV"
          id="email"
          name="email"
          onChange={[Function]}
          spellCheck={false}
          type="email"
        />
      </label>
      <label
        className="sc-bdnylx YDaVd"
        htmlFor="firstName"
      >
        <span
          className="sc-gtssRu hqOiqN"
        >
          First name
        </span>
        <input
          className="sc-eCApGN gNiOsV"
          id="firstName"
          name="firstName"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-bdnylx YDaVd"
        htmlFor="lastName"
      >
        <span
          className="sc-gtssRu hqOiqN"
        >
          Last name
        </span>
        <input
          className="sc-eCApGN gNiOsV"
          id="lastName"
          name="lastName"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <button
        className="sc-jSFkmK bVOnRo"
        disabled={false}
        id="create-button"
        type="submit"
      >
        Create
      </button>
    </form>
  </div>
</div>
`;

exports[`Auth Create form Form should render correctly with groups 1`] = `
<div
  className="sc-iCoHVE jPPvpm"
>
  <div
    className="sc-fujyUd juGuta"
  >
    <form
      noValidate={true}
      onSubmit={[Function]}
    >
      <label
        className="sc-bdnylx YDaVd"
        htmlFor="username"
      >
        <span
          className="sc-gtssRu hqOiqN"
        >
          Username
        </span>
        <input
          autoComplete="create-username"
          className="sc-eCApGN gNiOsV"
          id="username"
          name="username"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-bdnylx YDaVd"
        htmlFor="email"
      >
        <span
          className="sc-gtssRu hqOiqN"
        >
          Email address
        </span>
        <input
          autoComplete="create-email"
          className="sc-eCApGN gNiOsV"
          id="email"
          name="email"
          onChange={[Function]}
          spellCheck={false}
          type="email"
        />
      </label>
      <label
        className="sc-bdnylx YDaVd"
        htmlFor="firstName"
      >
        <span
          className="sc-gtssRu hqOiqN"
        >
          First name
        </span>
        <input
          className="sc-eCApGN gNiOsV"
          id="firstName"
          name="firstName"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-bdnylx YDaVd"
        htmlFor="lastName"
      >
        <span
          className="sc-gtssRu hqOiqN"
        >
          Last name
        </span>
        <input
          className="sc-eCApGN gNiOsV"
          id="lastName"
          name="lastName"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-bdnylx YDaVd"
        htmlFor="groupCode"
      >
        <span
          className="sc-gtssRu hqOiqN"
        >
          Select group
        </span>
        <select
          className="sc-pNWxx jysDZx"
          id="groupCode"
          name="groupCode"
          onChange={[Function]}
        >
          <option
            value="--"
          >
            -- Select --
          </option>
          <option
            data-qa="GROUP_1_option"
            value="GROUP_1"
          >
            Group 1
          </option>
          <option
            data-qa="GROUP_2_option"
            value="GROUP_2"
          >
            Group 2
          </option>
          <option
            data-qa="GROUP_3_option"
            value="GROUP_3"
          >
            Group 3
          </option>
        </select>
      </label>
      <button
        className="sc-jSFkmK bVOnRo"
        disabled={false}
        id="create-button"
        type="submit"
      >
        Create
      </button>
    </form>
  </div>
</div>
`;
